--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>resilience4j-timelimiter</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
