--- a/accounts/kubernetes/4_eurekaserver.yml
+++ b/accounts/kubernetes/4_eurekaserver.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: eurekaserver
-          image: eazybytes/eurekaserver:latest
+          image: mais85/eurekaserver:latest
           ports:
             - containerPort: 8070
           env:
