--- a/accounts/kubernetes/5_accounts.yml
+++ b/accounts/kubernetes/5_accounts.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: accounts
-          image: eazybytes/accounts:latest
+          image: mais85/accounts:latest
           ports:
             - containerPort: 8081
           env:
