--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 configserver/src/main/resources/application.properties
 /configserver/src/main/resources/application.properties
+/configserver/src/main/resources/**
