--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 configserver/src/main/resources/application.properties
+configserver/src/main/resources/
 /configserver/src/main/resources/application.properties
 /configserver/src/main/resources/**
