--- a/configserver/.gitignore
+++ b/configserver/.gitignore
@@ -1,3 +1,10 @@
+src/main/resources/application.properties
+configserver/src/main/resources/
+/configserver/src/main/resources/application.properties
+/configserver/src/main/resources/**
+./src/main/resources/**
+src/main/resources/**
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
