--- a/configserver/.gitignore
+++ b/configserver/.gitignore
@@ -4,6 +4,8 @@ configserver/src/main/resources/
 /configserver/src/main/resources/**
 ./src/main/resources/**
 src/main/resources/**
+/src/main/resources/application.properties
+
 
 HELP.md
 target/
