--- a/configserver/.gitignore
+++ b/configserver/.gitignore
@@ -30,6 +30,7 @@ build/
 !**/src/test/**/build/
 src/main/resources/application.properties
 /src/main/resources/application.properties
+../configserver/src/main/resources/application.properties
 
 ### VS Code ###
 .vscode/
