--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 src/main/resources/application.properties
 /src/main/resources/application.properties
 configserver/src/main/resources/application.properties
+configserver/src/main/resources/
