--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ src/main/resources/application.properties
 /src/main/resources/application.properties
 configserver/src/main/resources/application.properties
 configserver/src/main/resources/
+configserver/src/main/resources/**
