--- a/configserver/.gitignore
+++ b/configserver/.gitignore
@@ -31,6 +31,7 @@ build/
 src/main/resources/application.properties
 /src/main/resources/application.properties
 /src/main/resources/**
+/src/main/resources/
 ../configserver/src/main/resources/application.properties
 
 ### VS Code ###
