--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-src/main/resources/application.properties
-/src/main/resources/application.properties
-configserver/src/main/resources/application.properties
-configserver/src/main/resources/
-configserver/src/main/resources/**
+#src/main/resources/application.properties
+#/src/main/resources/application.properties
+#configserver/src/main/resources/application.properties
+#configserver/src/main/resources/
+#configserver/src/main/resources/**
