--- a/configserver/.gitignore
+++ b/configserver/.gitignore
@@ -5,7 +5,8 @@ target/
 !**/src/test/**/target/
 src/main/resources/
 /src/main/resources/application.properties
-
+src/main/resources/**
+/src/main/resources/
 
 ### STS ###
 .apt_generated
