--- a/configserver/.gitignore
+++ b/configserver/.gitignore
@@ -7,6 +7,8 @@ src/main/resources/
 /src/main/resources/application.properties
 src/main/resources/**
 /src/main/resources/
+configserver/src/main/resources/application.properties
+C:\Users\DeveloperPC\IdeaProjects\bankmicroservices\configserver\src\main\resources\application.properties
 ####******
 
 ### STS ###
