--- a/accounts/src/main/resources/application.properties
+++ b/accounts/src/main/resources/application.properties
@@ -34,13 +34,13 @@ resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.failureRateTh
 resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.waitDurationInOpenState= 30000
 resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.permittedNumberOfCallsInHalfOpenState=2
 
-#resilience4j.retry.configs.default.registerHealthIndicator= true // since  boot 3 not need
-resilience4j.retry.instances.retryForCustomerDetails.maxAttempts =3
+resilience4j.retry.configs.default.registerHealthIndicator= true
+resilience4j.retry.instances.retryForCustomerDetails.maxRetryAttempts=3
 resilience4j.retry.instances.retryForCustomerDetails.waitDuration=2000
 
-#resilience4j.ratelimiter.configs.default.registerHealthIndicator= true
-resilience4j.ratelimiter.instances.sayHello.timeoutDuration=3000
-resilience4j.ratelimiter.instances.sayHello.limitRefreshPeriod=8000
+resilience4j.ratelimiter.configs.default.registerHealthIndicator= true
+resilience4j.ratelimiter.instances.sayHello.timeoutDuration=5000
+resilience4j.ratelimiter.instances.sayHello.limitRefreshPeriod=5000
 resilience4j.ratelimiter.instances.sayHello.limitForPeriod=1
 
 # Micrometer related properties
