--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -19,9 +19,9 @@ management.info.env.enabled = true
 management.endpoint.shutdown.enabled = true
 endpoints.shutdown.enabled = true
 
-eureka.client.preferIpAddress = true
+eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
-eureka.fetchRegistry = true
+eureka.client.fetchRegistry = true
 eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka/
 
 info.app.name=Cards Microservice
